WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243838
GPUP deadlock shutting down RemoteRenderingBackend while drawing a MediaPlayer
https://bugs.webkit.org/show_bug.cgi?id=243838
Summary
GPUP deadlock shutting down RemoteRenderingBackend while drawing a MediaPlayer
Kimmo Kinnunen
Reported
2022-08-11 12:30:36 PDT
GPUP deadlock shutting down RemoteRenderingBackend while drawing a MediaPlayer 1. When shutting down RRB, GPUP main thread waits until the cleanup task has run 2. When drawing a media player, RRB work thread waits until the main thread has run the video player paint Solution is to run media players in a work queue
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-11 12:30:51 PDT
<
rdar://problem/98523368
>
Kimmo Kinnunen
Comment 2
2022-08-11 22:50:43 PDT
I have not seen this one on any site, but I have not looked for it either. This has occurred for me in dev scenarios running a debugger.
Kimmo Kinnunen
Comment 3
2024-09-12 12:24:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33560
EWS
Comment 4
2024-09-13 11:57:24 PDT
Committed
283637@main
(63ca1cca5ba5): <
https://commits.webkit.org/283637@main
> Reviewed commits have been landed. Closing PR #33560 and removing active labels.
EWS
Comment 5
2024-09-18 10:04:49 PDT
Committed
280938.352@safari-7619-branch
(f8f150d2bc41): <
https://commits.webkit.org/280938.352@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1815 and removing active labels.
EWS
Comment 6
2024-09-20 15:42:00 PDT
Committed
283286.110@safari-7620-branch
(582552ec55fd): <
https://commits.webkit.org/283286.110@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1868 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug