Source/WebCore/platform/graphics/displaylists/DisplayListItem.h
@@ -113,9 +113,6 @@ class StrokeClosedArc;
 class StrokeQuadCurve;
 class StrokeBezierCurve;
 #endif
-#if ENABLE(VIDEO)
-class PaintFrameForMedia;
-#endif
 #if USE(CG)
 class ApplyFillPattern;
 class ApplyStrokePattern;
@@ -192,9 +189,6 @@ using Item = std::variant
     , StrokeClosedArc
     , StrokeQuadCurve
     , StrokeBezierCurve
-#endif
-#if ENABLE(VIDEO)
-    , PaintFrameForMedia
 #endif
 #if USE(CG)
     , ApplyFillPattern
