Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h
@@ -46,7 +46,6 @@
 #include "StreamMessageReceiver.h"
 #include "StreamServerConnection.h"
 #include <WebCore/ImageBufferPixelFormat.h>
-#include <WebCore/MediaPlayerIdentifier.h>
 #include <WebCore/ProcessIdentity.h>
 #include <WebCore/RenderingResourceIdentifier.h>
 #include <wtf/HashMap.h>
